# littleBrowser

./: Cargo.toml  Makefile  README.md
assets/fonts/: README.md
example/broswer/Internet/: Internet.sln  UpgradeLog.htm  UpgradeLog2.htm
example/broswer/Internet/Internet/: Form1.Designer.cs  Form1.cs  Form1.resx  Internet.csproj  Program.cs
example/broswer/Internet/Internet/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/: app.rs  main.rs
src/net/: dns.rs  http.rs  mod.rs  url_input.rs
src/render/: fonts.rs  html.rs  images.rs  mod.rs  model.rs
web-server/: README.md
web-server/mongoose-master/: main.c  mongoose  mongoose.c
web-server/mongoose-master/html/: index.html
web-server/mongoose-master/html/cgi-bin/: adder.c  hello.cgi
web-server/mongoose-master/html/test1/: GET_POST.cgi  GET_POST.html  mysql.cgi  mysql.html  mysql_alter.cgi  mysql_delete.cgi  mysql_insert.cgi
web-server/mongoose-master/html/test2/: connectdb.py  create_table.py  insert.py  serach.py
