[package]
name = "littlebrowser"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", default-features = true }
egui = "0.29"
url = "2.5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
encoding_rs = "0.8"
thiserror = "2"

# Faster string handling/logging are intentionally omitted to keep it simple.
